# colormel

./: .gitignore  Cargo.toml  build.rs  manifest.manifest
src/: app.rs  config.rs  graphics.rs  gui.rs  main.rs  visualize.rs
src/graphics/: composite.rs  context.rs  core.rs  duplicate.rs  initializer.rs  math.rs  renderer.rs  resource.rs
src/graphics/core/: command_queue.rs  descriptor.rs  device.rs  fence.rs  pso.rs  query.rs  resource.rs  root_signature.rs  swap_chain.rs  wrap.rs
src/gui/: app.rs  control.rs  hwnd.rs  menu.rs  scroll.rs  utils.rs  viewer.rs  window.rs
src/shaders/: colorcloud.hlsl  common.hlsli  filter.hlsl  histogram.hlsl  primitive.hlsl
src/visualize/: colorcloud.rs  filter.rs  grid.rs  histogram.rs
